package flyweight.theory;

/**
 * @author YangLiuQing
 * @date 2020/6/10 8:51
 * 外部状态
 */
public class User {

    private String name;

    public User(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
